# Mace

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
android/: .gitignore  CMakeLists.txt
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt
cmake/: AndroidConfig.cmake  AppleConfig.cmake
cmake/modules/android/: AndroidNdkGdb.cmake  AndroidTestUtilities.cmake  BundleUtilities.cmake  CMakeBackwardCompatibilityC.cmake  CMakeBackwardCompatibilityCXX.cmake  CMakeDependentOption.cmake  CMakeDetermineASMCompiler.cmake  CMakeDetermineCompilerId.cmake  CMakeDetermineVSServicePack.cmake  CMakeExtraGeneratorDetermineCompilerMacrosAndIncludeDirs.cmake  CMakeFindBinUtils.cmake  CMakeFindCodeBlocks.cmake  CMakeFindEclipseCDT4.cmake  CMakeForceCompiler.cmake  CMakeIOSInstallCombined.cmake  CMakeTestASMCompiler.cmake  CMakeTestJavaCompiler.cmake  CMakeTestRCCompiler.cmake  CTestUseLaunchers.cmake  CheckCSourceCompiles.cmake  CheckCSourceRuns.cmake  CheckCXXSourceCompiles.cmake  CheckCXXSourceRuns.cmake  CheckFortranFunctionExists.cmake  CheckFortranSourceCompiles.cmake  CheckFortranSourceRuns.cmake  CheckFunctionExists.cmake  CheckIncludeFile.cmake  CheckIncludeFileCXX.cmake  CheckIncludeFiles.cmake  CheckLibraryExists.cmake  CheckOBJCSourceCompiles.cmake  CheckOBJCSourceRuns.cmake  CheckOBJCXXSourceCompiles.cmake  CheckOBJCXXSourceRuns.cmake  CheckPIESupported.cmake  CheckPrototypeDefinition.cmake  CheckSymbolExists.cmake  CheckTypeSize.cmake  CheckVariableExists.cmake  (+163 more)
cmake/modules/android/Compiler/: AppleClang-CXX-FeatureTests.cmake  AppleClang-DetermineCompiler.cmake  Clang-CXX-FeatureTests.cmake  Clang-DetermineCompiler.cmake  VisualAge-C-DetermineCompiler.cmake  VisualAge-CXX-DetermineCompiler.cmake  XL-C-DetermineCompiler.cmake  XL-CXX-DetermineCompiler.cmake  zOS-C-DetermineCompiler.cmake  zOS-CXX-DetermineCompiler.cmake
cmake/modules/android/FindPython/: Support.cmake
cmake/modules/android/FortranCInterface/: CMakeLists.txt  Detect.cmake
cmake/modules/android/Internal/CPack/: CPackDeb.cmake
cmake/modules/android/Platform/: Android.cmake
core/src/: CMakeLists.txt  Engine.cpp  Engine.h  Log.h  Main.h  Renderer.cpp
core/src/ios/: IosAppDelegate.mm  IosBridge.h  IosGLKView.h  IosGLKViewController.h  IosSceneDelegate.h  IosSceneDelegate.mm  MaceIos.cmake  ios-toolchain.cmake
core/src/ndk/: AndroidLog.cpp  MaceNdk.cmake  NdkBridge.cpp  NdkBridge.h
ios/MaceIosAgain/: main.mm
ios/MaceIosAgain.xcodeproj/: project.pbxproj
ios/MaceIosApp.xcodeproj/: project.pbxproj
ios/MaceIosApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: CMakeLists.txt  Engine.cpp  Engine.h  Main.h  Renderer.cpp  Renderer.h
src/ios/: CMakeLists.txt  IosAppDelegate.h  IosBridge.mm  IosGLKView.mm  IosGLKViewController.mm  MaceIos.cmake
src/ndk/: MaceNdk.cmake  NdkBridge.cpp  NdkBridge.h
